--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,15 +2,18 @@
 include: 'rules/common.smk'
 include: 'rules/GetData.smk'
 include: 'rules/QC_RNA.smk'
+include: 'rules/QC_ATAC.smk'
 
 # Define results working directory
-workdir: config['User']['output_dir']
+workdir: config['User']['output_dir']\
+
 
 rule MultiomePipe_output:
     input:
         # QC RNA
-        expand("QC/RNA/{sample}/{sample}_filtered.hd5mu", sample=SAMPLES.keys()) if QC_RNA else [],
-        expand("QC/RNA/{sample}/{sample}_processed.rds", sample=SAMPLES.keys()) if QC_RNA else [],
+        expand("QC/RNA/{sample}/Filtering/{sample}_filtered.hd5ad", sample=SAMPLES.keys()) if QC_RNA else [],
+        expand("QC/RNA/{sample}/Plots/{sample}_ElbowPlot.png", sample=SAMPLES.keys()) if QC_RNA else [],
+        #expand("QC/RNA/{sample}/{sample}_processed.rds", sample=SAMPLES.keys()) if QC_RNA else [],
         # QC ATAC
         expand("QC/ATAC/{sample}.tsv", sample=SAMPLES.keys()) if QC_ATAC else [],
     default_target: True
