--- a/config/config_human_brain_3k.yaml
+++ b/config/config_human_brain_3k.yaml
@@ -2,10 +2,8 @@
 
 # Change those values to yours
 User:
-  input_dir: /home/dondia/run_MultiomePipe/input_data
-  output_dir: /home/dondia/run_MultiomePipe/output
-  sample_map: /path/to/sample_map.tsv
-  cancer_cell_type: HGSOC
+  input_dir: /home/dondia/run_MultiomePipe/input_human_brain_3k
+  output_dir: /home/dondia/run_MultiomePipe/output_human_brain_3k
   
 # Change any of those to True if you want to run it, else False
 Run:
@@ -18,12 +16,14 @@ samples:
   #10X_granulocyte: https://cf.10xgenomics.com/samples/cell-arc/1.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k
   human_brain_3k: https://cf.10xgenomics.com/samples/cell-arc/1.0.0/human_brain_3k/human_brain_3k
 
+IS_FILTERED: False
+IS_ANNOTATED: False
 
 QC_RNA:
   raw_data: True
 
   CellbenderRemoveBackgroundRNA:
-    n_splits: 10
+    n_cells: 10
     cuda: '' # change to '--cuda' if CUDA is installed and working
     expected-cells:
        human_brain_3k: 300
@@ -39,7 +39,12 @@ QC_RNA:
     doublet_threshold: .15
 
   PlottingAnnotations:
-    doublets: "Doublets" # Name all the clusters you want to remove like this
+    doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
+    celltype_key: "cell_type"
+
+  ConcatanateAnnDataObjects:
+    sample_key: ""
+    batch_key: ""
 
 ### QC ATAC
 QC_ATAC:
