--- a/workflow/envs/cellbender.yaml
+++ b/workflow/envs/cellbender.yaml
@@ -2,4 +2,10 @@ name: cellbender
 channels:
   - defaults
   - conda-forge
-prefix: /home/dondia/anaconda3/envs/cellbender
+dependencies:
+  - python=3.13
+  - pip
+  - pip:
+      - git+https://github.com/broadinstitute/CellBender.git@4334e8966217c3591bf7c545f31ab979cdc6590d
+      - scanpy
+      - anndata
