--- a/config/config_Fetahu2023.yaml
+++ b/config/config_Fetahu2023.yaml
@@ -13,11 +13,21 @@ Run:
   QC_ATAC: False
 
 samples:
-  M1: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M2a: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659420&format=file&file=GSM6659420%5FM2a%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M2b: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659421&format=file&file=GSM6659421%5FM2b%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M3: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659422&format=file&file=GSM6659422%5FM3%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M4: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659423&format=file&file=GSM6659423%5FM4%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  M1:
+    donor: "M1"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  M2a:
+    donor: "M2"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659420&format=file&file=GSM6659420%5FM2a%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  M2b:
+    donor: "M2"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659421&format=file&file=GSM6659421%5FM2b%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  M3:
+    donor: "M3" 
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659422&format=file&file=GSM6659422%5FM3%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  M4:
+    donor: "M4"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659423&format=file&file=GSM6659423%5FM4%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
 
 IS_FILTERED: False
 IS_ANNOTATED: False
@@ -29,21 +39,27 @@ QC_RNA:
   CellbenderRemoveBackgroundRNA:
     n_splits: 10
     cuda: '' # change to '--cuda' if CUDA is installed and working
-    epochs: 250
+    epochs: 150
     expected-cells: 500
-    checkpoint_mins: 7
+    checkpoint_mins: 30
     projected_ambient_count_threshold: 0.05
     empty_drop_training_fraction: 0.05
 
   RawFilteringRNA:
-    min_genes: 500
+    min_genes: 200
     min_cells: 5
-    doublet_threshold: .15
+    n_mads: 20
+    doublet_threshold: .25
+    n_top_genes: 2000
 
   PlottingAnnotations:
     doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
     celltype_key: "cell_type"
+    leiden_res: "leiden_res_0.20"
 
-  ConcatanateAnnDataObjects:
-    sample_key: "DonorNumber"
-    batch_key: "batch"
+  MergeSamplesAnnData:
+    sample_key: "sample"
+    donor_key: "donor"
+
+  TrajectoryAnalysis:
+    diffusion_component: 3
