--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,19 +7,11 @@ include: 'rules/QC_RNA.smk'
 # Define results working directory
 workdir: config['User']['output_dir']
 
-if QC_RNA:
-    if IS_BATCHED:
-        qc_rna_input = "QC/RNA/Merged/merged.batch_corrected.h5ad"
-    else:
-        qc_rna_input = expand("QC/RNA/{sample}/Annotation/{sample}_annotated.h5ad", sample=SAMPLES.keys())
-else:
-    qc_rna_input = []
-
 rule MultiomePipe_output:
     input:
         # QC RNA
-        qc_rna_input,
-        expand("QC/RNA/{sample}/Annotation/{sample}_CellTypeAnnotations.csv", sample=SAMPLES.keys()),
+        "QC/RNA/Merge/Annotation/merged.diffusion.h5ad",
+        "QC/RNA/Merge/Annotation/merged.CellTypeAnnotations.csv",
         # QC ATAC
         expand("QC/ATAC/{sample}.tsv", sample=SAMPLES.keys()) if QC_ATAC else [],
     default_target: True
