--- a/config/config_Fetahu2023.yaml
+++ b/config/config_Fetahu2023.yaml
@@ -48,18 +48,22 @@ QC_RNA:
   RawFilteringRNA:
     min_genes: 200
     min_cells: 5
-    n_mads: 20
+    n_mads: 5
     doublet_threshold: .25
     n_top_genes: 2000
 
   PlottingAnnotations:
     doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
     celltype_key: "cell_type"
-    leiden_res: "leiden_res_0.20"
+    leiden_res: "leiden_res_1.00"
 
   MergeSamplesAnnData:
     sample_key: "sample"
     donor_key: "donor"
 
   TrajectoryAnalysis:
-    diffusion_component: 3
+    diffusion_component: 1
+    root_ctype: "Hematopoietic precursor cell"
+    celltype_mask: "'Neuroblastoma cell' 'Undefined' 'Erythroid lineage cell'" 
+    quantile: 0.99
+    cat_order: "'Hematopoietic precursor cell' 'T cell' 'NK cell' 'Myeloid cell' 'Plasmacytoid dendritic cell' 'B cell'"
