--- a/config/config_neurips2021.yaml
+++ b/config/config_neurips2021.yaml
@@ -14,22 +14,48 @@ Run:
 
 samples:
   site1_donor1:
+    donor: "D1"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site1_donor2:
+    donor: "D2"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site1_donor3:
+    donor: "D3"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site2_donor1:
+    donor: "D1"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site2_donor4:
+    donor: "D4"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site2_donor5:
+    donor: "D5"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site3_donor3:
+    donor: "D3"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site3_donor6:
+    donor: "D6"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site3_donor7:
+    donor: "D7"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site3_donor10:
+    donor: "D10"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site4_donor1:
+    donor: "D1"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site4_donor8:
+    donor: "D8"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
   site4_donor9:
+    donor: "D9"
+    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
 
-IS_FILTERED: True
-IS_ANNOTATED: True
-IS_BATCHED: True
+IS_FILTERED: False
+IS_ANNOTATED: False
+IS_BATCHED: False
 
 QC_RNA:
   raw_data: True
@@ -37,23 +63,37 @@ QC_RNA:
   CellbenderRemoveBackgroundRNA:
     n_splits: 10
     cuda: '' # change to '--cuda' if CUDA is installed and working
-    epochs: 50
-    checkpoint_mins: 1
+    epochs: 150
+    expected-cells: 500
+    checkpoint_mins: 30
     projected_ambient_count_threshold: 0.05
     empty_drop_training_fraction: 0.05
 
   RawFilteringRNA:
-    min_genes: 500
+    min_genes: 200
     min_cells: 5
-    doublet_threshold: .15
+    n_mads: 5
+    doublet_threshold: .25
+    n_top_genes: 2000
 
   PlottingAnnotations:
     doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
     celltype_key: "cell_type"
+    leiden_res: "leiden_res_0.50"
 
-  ConcatanateAnnDataObjects:
-    sample_key: "DonorNumber"
-    batch_key: "batch"
+  MergeSamplesAnnData:
+    sample_key: "sample"
+    donor_key: "donor"
+
+  TrajectoryAnalysis:
+    diffusion_component: 1
+    root_ctype: "Hematopoietic precursor cell"
+    celltype_mask: "'Neuroblastoma cell' 'Undefined' 'Other' 'Erythroid lineage cell' 'T cell' 'NK cell'  'Myeloid cell' 'Plasmacytoid dendritic cell'" 
+    n_genes: 20
+    clustering_distance: 1
+    cat_order: "'Hematopoietic precursor cell' 'Erythroid lineage cell' 'T cell' 'NK cell'  'Myeloid cell' 'Plasmacytoid dendritic cell' 'B cell'"
+    branching: 0
+
 
 ### QC ATAC
 QC_ATAC:
