--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,6 +16,7 @@ rule MultiomePipe_output:
         "QC/RNA/Merged/TrajectoryAnalysis/merged.diffusion.h5ad" if TRAJ else [],
         # QC ATAC
         expand("QC/ATAC/{sample}/QC/{sample}.barcodes_passing_qc.tsv", sample=SAMPLES.keys()) if QC_ATAC else [],
-        #expand("QC/ATAC/{sample}/bw_paths.tsv", sample=SAMPLES.keys()) if QC_ATAC else [],
+        expand("QC/ATAC/{sample}/LDAModels/{sample}.models.pkl", sample=SAMPLES.keys()) if QC_ATAC else [],
+        expand("QC/ATAC/{sample}/Clustering/Plots/heatmap.png", sample=SAMPLES.keys()) if QC_ATAC else [],
     default_target: True
     localrule: True
