--- a/config/config_BMO_Viki.yaml
+++ b/config/config_BMO_Viki.yaml
@@ -2,7 +2,7 @@
 
 # Change those values to yours
 User:
-  input_dir: /home/arthur_d/bioinf_isilon/Research/TASCHNERMANDL/Internal/users/arthur_d/projects/BMO_Viki/analysis/QC/scRNA/CellRangerCount/
+  input_dir: /home/arthur_d/bioinf_isilon/Research/TASCHNERMANDL/Internal/users/arthur_d/projects/BMO_Viki/analysis/QC/scRNA/CellRangerCount
   output_dir: /scratch/research/taschnermandl/arthur_d/BMO_viki/
   
 # Change any of those to True if you want to run it, else False
@@ -35,12 +35,17 @@ IS_FILTERED: False
 IS_ANNOTATED: False
 IS_BATCHED: False
 
+General:
+  genome: "hg38"
+  celltype_key: "cell_type"
+  sample_key: "sample"
+  donor_key: "donor"
+
 QC_RNA:
   raw_data: True
 
   CellbenderRemoveBackgroundRNA:
-    n_splits: 10
-    cuda: '--cuda' # change to '' if CUDA is not available
+    cuda: '' # change to '--cuda' if CUDA is  available
     epochs: 150
     expected-cells: 20000
     checkpoint_mins: 30
@@ -56,12 +61,7 @@ QC_RNA:
 
   PlottingAnnotations:
     doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
-    celltype_key: "cell_type"
     leiden_res: "leiden_res_0.50"
-
-  MergeSamplesAnnData:
-    sample_key: "sample"
-    donor_key: "donor"
 
   TrajectoryAnalysis:
     diffusion_component: 1
@@ -71,3 +71,58 @@ QC_RNA:
     clustering_distance: 1
     cat_order: "'Hematopoietic precursor cell' 'Erythroid lineage cell' 'T cell' 'NK cell'  'Myeloid cell' 'Plasmacytoid dendritic cell' 'B cell'"
     branching: 0
+
+### QC ATAC
+QC_ATAC:
+  ExportPseudobulk:
+    variable: "VSN_cell_type"
+    sample_id_col: "VSN_sample_id"
+    n_cpu: 1
+    normalize_bigwig: ""         # use "" if False, "--normalize_bigwig" if True
+    split_pattern: "-"
+    chromsizes: null 
+
+  MACS2CallPeaks:
+    format: "BEDPE"
+    gsize: "hs"
+    qvalue: 0.05
+    shift: 73
+    extsize: 146
+    keep_dup: "all"
+    call_summits: "--call-summits"
+    nolambda: "--nolambda"
+
+  DownloadTSS:
+    tss_dataset: "hsapiens_gene_ensembl"
+    tss_host: "http://www.ensembl.org"
+
+  ComputeQC:
+    threads: 1
+    min_fragments_per_cb: 100
+    dont-collapse_duplicates: "" # --dont-collapse_duplicates to keep duplicate fragments (same chromosomal positions and linked to the same cell barcode), "" if false
+    # TSS profile statistics calculation settings:
+    tss_flank_window: 2000
+    tss_smoothing_rolling_window: 10
+    tss_minimum_signal_window: 100
+    tss_window: 50
+    tss_min_norm: 0.2
+
+  ApplyQC:
+    unique_fragments_threshold: null         # null (None) to use automatic thresholding, int otherwise (1000?)
+    tss_enrichment_threshold: null           # null (None) to use automatic thresholding, int/float otherwise (10?)
+    frip_threshold: 0
+
+  CreateATACCountMatrix:
+    threads: 1
+    min_fragments_per_region: 10
+    min_cells_per_region: 10
+  
+  RunLDAModels:
+    n_cpus: 1
+    n_topics: "2 5 10 15 20 25 30 35 40 45 50"
+    n_iter: 500
+    random_state: 0
+    alpha: 50
+    alpha_by_topic: '--alpha_by_topic'
+    eta: 0.1
+    eta_by_topic: '--eta_by_topic'
