--- a/config/config_Fetahu2023.yaml
+++ b/config/config_Fetahu2023.yaml
@@ -2,8 +2,8 @@
 
 # Change those values to yours
 User:
-  input_dir: /home/dondia/run_MultiomePipe/input_Fetahu2023
-  output_dir: /home/dondia/run_MultiomePipe/output_Fetahu2023
+  input_dir: /home/arthur_d/bioinf_isilon/Research/TASCHNERMANDL/Internal/users/arthur_d/projects/BMO_Viki/analysis/QC/scRNA/CellRangerCount/
+  output_dir: /scratch/research/taschnermandl/arthur_d/BMO_viki/
   
 # Change any of those to True if you want to run it, else False
 Run:
@@ -11,37 +11,45 @@ Run:
   QC_RNA: True
   # QC the ATAC data
   QC_ATAC: False
+  TRAJ: False
 
 samples:
-  M1:
-    donor: "M1"
-    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659419&format=file&file=GSM6659419%5FM1%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M2a:
-    donor: "M2"
-    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659420&format=file&file=GSM6659420%5FM2a%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M2b:
-    donor: "M2"
-    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659421&format=file&file=GSM6659421%5FM2b%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M3:
-    donor: "M3" 
-    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659422&format=file&file=GSM6659422%5FM3%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
-  M4:
-    donor: "M4"
-    weblink: "https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSM6659423&format=file&file=GSM6659423%5FM4%5Fraw%5Ffeature%5Fbc%5Fmatrix%2Eh5"
+  BMOalone:
+    donor: "BMOalone"
+  BMO-IMR-DOX:
+    donor: "BMO-IMR-DOX"
+  BMO-IMR-noDOX:
+    donor: "BMO-IMR-noDOX"
+  BMO-SKNBE2c:
+    donor: "BMO-SKNBE2c"
+  BMO-SKNSH:
+    donor: "BMO-SKNSH"
+  BMO-STANB12:
+    donor: "BMO-STANB12"
+  BMO-STANB8:
+    donor: "BMO-STANB8"
 
 IS_10X_REPO: False
+IS_LOCAL: True
 IS_FILTERED: False
 IS_ANNOTATED: False
 IS_BATCHED: False
+
+# General configuration - REQUIRED by Snakefile rules
+General:
+  genome: "hg38"
+  celltype_key: "cell_type"
+  sample_key: "sample"
+  donor_key: "donor"
 
 QC_RNA:
   raw_data: True
 
   CellbenderRemoveBackgroundRNA:
     n_splits: 10
-    cuda: '' # change to '--cuda' if CUDA is installed and working
+    cuda: '--cuda' # change to '' if CUDA is not available
     epochs: 150
-    expected-cells: 500
+    expected-cells: 20000
     checkpoint_mins: 30
     projected_ambient_count_threshold: 0.05
     empty_drop_training_fraction: 0.05
@@ -55,12 +63,7 @@ QC_RNA:
 
   PlottingAnnotations:
     doublets: "Doublets Undefined" # All the clusters you want to remove, e.g. "Doublets Undefined T.cells"
-    celltype_key: "cell_type"
     leiden_res: "leiden_res_0.50"
-
-  MergeSamplesAnnData:
-    sample_key: "sample"
-    donor_key: "donor"
 
   TrajectoryAnalysis:
     diffusion_component: 1
